welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  Tableau=chopperCouleur()
  decale()
  for (i <- 1 to 4){
    reprodCouleur(Tableau)
    decale()
  }
}














def reprodCouleur(T:Array[Color]){
  for (i<- 0 to getMondeHauteur()-1){
    setCouleurBrosse(T(i))
    marque()
    avance()
  }  
}

def chopperCouleur(){
  var y=getMondeHauteur()
  var T:Array[Color](y)
  for (i<- T){
    T(i)=getCouleurSol()
    avance()
  }  
 return T
}

def decale(){
  gauche()
  avance()
  droite()
  avance()
}

def marque(){
  baisseBrosse()
  leveBrosse()
}